compiler/kernc_cli/tests/soundness/run-pass/pattern/user_pattern_inside_closure.kn
// class: pattern-protocol
// exit: 0

struct Is {
    expected: i32,
};

impl Is : Pattern[i32] {
    type Bind = void;

    fn apply(value: i32) ?Bind {
        if (value == self.expected) {
            return .{ Some: {} };
        }
        return .None;
    }
}

fn call(cb: &Fn(i32) i32) i32 {
    return cb(5);
}

fn main() i32 {
    return call([](value: i32) i32 {
        let five = Is.{ expected: 5 };
        return match (value) {
            five => 0,
            _ => 1,
        };
    });
}
